actualización de la función serverless

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,12 @@
     <div id="logSection">
       <h2>Vista previa del mensaje a enviar:</h2>
       <pre id="logContent"></pre>
+
+      <div id="debugSection">
+        <h3>Debug Info:</h3>
+        <pre id="debugInfo"></pre>
+      </div>
+      
     </div>
   </div>
 
