Agregar botón patreon

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,14 @@
       <button id="logoutBtn">Cerrar sesión</button>
     </div>
 
+  <!-- NUEVO: Sección para registrar "Nombre Patreon" -->
+  <h2>Registrar Nuevo Correo Patreon</h2>
+  <div id="registroContainer">
+    <label for="nombrePatreonInput">Nombre Patreon:</label>
+    <input type="text" id="nombrePatreonInput" placeholder="Ingresa tu nombre de Patreon">
+    <button id="registrarCorreoBtn">Registrar Correo</button>
+  </div>
+
     <h1>Crear Escenas y Diálogos</h1>
 
     <!-- CONTENEDOR PRINCIPAL DE ESCENAS -->
