--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   </div>
 
     <h1>Crear Escenas y Diálogos</h1>
-
+    <div id="charCounter">0 / 400</div>
     <!-- CONTENEDOR PRINCIPAL DE ESCENAS -->
     <div id="scenesContainer">
       <!-- Se agregarán las escenas de forma dinámica -->
