--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,6 @@
       <button id="logoutBtn">Cerrar sesión</button>
     </div>
 
-  <!-- NUEVO: Sección para registrar "Nombre Patreon" -->
-  <h2>Registrar Nuevo Correo Patreon</h2>
-  <div id="registroContainer">
-    <label for="nombrePatreonInput">Nombre Patreon:</label>
-    <input type="text" id="nombrePatreonInput" placeholder="Ingresa tu nombre de Patreon">
-    <button id="registrarCorreoBtn">Registrar Correo</button>
-  </div>
-
     <h1>Crear Escenas y Diálogos</h1>
     <div id="charCounter">0 / 400</div>
     <!-- CONTENEDOR PRINCIPAL DE ESCENAS -->
@@ -66,6 +58,13 @@
         <pre id="debugInfo"></pre>
       </div>
     </div> -->
+  </div>
+  <!-- NUEVO: Sección para registrar "Nombre Patreon" -->
+  <h2>(Solo la primera vez): Registrar usuario Patreon</h2>
+  <div id="registroContainer">
+    <label for="nombrePatreonInput">Nombre Patreon:</label>
+    <input type="text" id="nombrePatreonInput" placeholder="Ingresa tu nombre de Patreon">
+    <button id="registrarCorreoBtn">Registrar</button>
   </div>
 
   <!-- POPUP / MODAL OVERLAY (por defecto oculto) -->
