calcular cuota y mejorar estilo

--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,6 @@
     <h1>Crear Escenas y Diálogos</h1>
     <div id="charCounter">0 / 400</div>
 
-    <!-- Indicadores Patreon -->
-    <div id="patreonInfo">
-      <span>Fecha Suscripción: <span id="fechaSuscript">0</span></span> | 
-      <span>Cuota Mensual: <span id="cuotaMensual">0</span></span> | 
-      <span>Videos Procesados: <span id="videosProcesados">0</span></span>
-    </div>
-
     <!-- CONTENEDOR PRINCIPAL DE ESCENAS -->
     <div id="scenesContainer">
       <!-- Se agregarán las escenas de forma dinámica -->
@@ -57,6 +50,12 @@
     <!-- BOTÓN PARA ENVIAR TODO EL CONTENIDO -->
     <button id="sendAllBtn">Enviar</button>
 
+    <!-- Indicadores Patreon -->
+    <div id="patreonInfo">
+      <span>Fecha Suscripción: <span id="fechaSuscript">0</span></span> | 
+      <span>Cuota Mensual: <span id="cuotaMensual">0</span></span> | 
+      <span>Videos Procesados: <span id="videosProcesados">0</span></span>
+    </div>
     <!-- SECCIÓN DE LOGS: Vista previa del mensaje a enviar -->
     <!-- <div id="logSection">
       <h2>Vista previa del mensaje a enviar:</h2>
@@ -67,8 +66,8 @@
       </div>
     </div> -->
       <!-- NUEVO: Sección para registrar "Nombre Patreon" -->
-    <h2>(Solo la primera vez): Registrar usuario Patreon</h2>
-    <h4>Si sale un error, contacta JC en Patreon</h4>
+    <h4>(Solo la primera vez): Registrar usuario Patreon</h4>
+    <p>Si sale un error, contacta JC en Patreon</p>
     <div id="registroContainer">
       <label for="nombrePatreonInput">Nombre en Patreon:</label>
       <input type="text" id="nombrePatreonInput" placeholder="Ingresa tu nombre de Patreon">
